tests/NormalTests/paczka1/fuzzy1/42217546.err
Error in line 1: ZN3J4x S322 71,7
Error in line 15: wgwbth A266 88,0
Error in line 8: ZN3J4x S652 190,0
Error in line 25: ZN3J4x S322 33,4
Error in line 24: kuD5Q S652 77,3
Error in line 31: zfMZIZPMbq S652 69,1
